fix(site): table scroll overflow

--- a/shared/src/less/table.less
+++ b/shared/src/less/table.less
@@ -504,7 +504,7 @@ table.dataTable {
 					top: 0;
 					left: 0;
 					/*right: calc(-1 * (100vw - 60px));*/
-					width: calc(100vw - var(--thumb-size) + 10px);
+					width: calc(100vw - var(--thumb-size) - var(--padding-size));
 					padding: 8px 10px;
 					padding-left: 15px;
 					background-color: var(--row-bg);
